--- a/README
+++ b/README
@@ -4,4 +4,6 @@ Izvrsiti skriptu: SE401-Database.sql
 Izbildovati backend aplikaciju koriscenjem komande: mvn clean install 
 Startovati backend aplikaciju koristeci komandu: mvn spring-boot:run
 
-Da bi pokrenuli frontend aplikaciju potrebno je izvrsiti sledecu komandu: ng serve
+Da bi pokrenuli frontend aplikaciju potrebno je izvrsiti sledece komande:
+npm install
+ng serve
